# Automate-Python

./: .gitignore  README.md  requirements.txt
Laboratories/Lab1/: lab1.ipynb
Laboratories/Lab2/: Lab2.ipynb
Laboratories/Lab3/: lab3.ipynb
Laboratories/Lab4/: lab4.ipynb  settings
Laboratories/Lab4/black_box/: CMakeLists.txt  lab4.ipynb  main.cpp
Laboratories/Lab5/: Lab5.ipynb
Laboratories/Lab6/: Lab6.ipynb
Laboratories/Lab6/advection_solver/: CMakeLists.txt  advection_implicit_serial.c
Lectures/Lecture1/: Lecture 1.ipynb  function.py
Lectures/Lecture2/: Lecture 2.ipynb  animal.py
Lectures/Lecture3/: Lecture 3.ipynb  Spruce Budworm - template.ipynb  burza  mean.avg
Lectures/Lecture4/: Lecture 4.ipynb
Lectures/Lecture4/tick-tick/: CMakeLists.txt  main.cpp
Lectures/Lecture5/: Lecture 5.ipynb
Lectures/Lecture6/: Lecture 6.ipynb
Lectures/Lecture6/examplelib/: CMakeLists.txt  example1.c  example2.c  example3.c  example4.c  mandelbrot.c
